move message resolver function to util class